make: Fix incorrectly generating tags for rules content

--- a/tests/ctags/Makefile.am
+++ b/tests/ctags/Makefile.am
@@ -200,6 +200,7 @@ test_sources = \
 	line_directives.c				\
 	local.c							\
 	macros.c						\
+	make-variable-on-cmdline.mak	\
 	masm.asm						\
 	matlab_backtracking.m			\
 	matlab_test.m					\
