Add signallist.i to gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -92,6 +92,7 @@ Makefile.in
 # /src/
 #-----------------------------------------------------------------------
 /src/geany
+/src/signallist.i
 
 #-----------------------------------------------------------------------
 # /doc/
