Use Autoconf to perform substitutions in geany.desktop file
Renamed to .in.in, since Intltool uses .in already. Added GEANY_BUILDDIR
substitution to get the fully expanded path for the Exec key (@bindir@
doesn't fully expand).

Updated auxiliary/build files for new file.

--- a/Makefile.am
+++ b/Makefile.am
@@ -17,7 +17,7 @@ EXTRA_DIST = \
 	autogen.sh \
 	wscript \
 	waf \
-	geany.desktop.in \
+	geany.desktop.in.in \
 	geany.pc.in \
 	geany.spec \
 	ChangeLog.pre-0-17 \
@@ -33,6 +33,7 @@ EXTRA_DIST = \
 
 DISTCLEANFILES = \
 	geany.desktop \
+	geany.desktop.in \
 	intltool-extract \
 	intltool-merge \
 	intltool-update
