--- a/configure.ac
+++ b/configure.ac
@@ -38,6 +38,7 @@ fi
 
 AC_PROG_INSTALL
 AC_PROG_LN_S
+AC_PROG_SED
 
 # autoscan start
 
@@ -126,8 +127,6 @@ GEANY_CHECK_DOXYGEN
 # libgeany
 GEANY_LIB_INIT
 
-AC_SUBST([GEANY_BINDIR], [$(eval echo "$(eval echo "$bindir")")])
-
 # Output
 AC_CONFIG_FILES([
 		Makefile
@@ -155,7 +154,6 @@ AC_CONFIG_FILES([
 		data/Makefile
 		doc/Makefile
 		doc/geany.1
-		geany.desktop.in
 		geany.spec
 		geany.pc
 		doc/Doxyfile
