--- a/geany.desktop.in.in
+++ b/geany.desktop.in.in
@@ -4,7 +4,7 @@ Version=1.0
 _Name=@PACKAGE_NAME@
 _GenericName=Integrated Development Environment
 _Comment=A fast and lightweight IDE using GTK2
-Exec=@GEANY_BINDIR@/geany %F
+Exec=@bindir@/geany %F
 Icon=geany
 Terminal=false
 Categories=GTK;Development;IDE;
