--- a/configure.ac
+++ b/configure.ac
@@ -24,7 +24,7 @@ fi
 AC_USE_SYSTEM_EXTENSIONS
 
 m4_ifdef([AM_PROG_AR],[AM_PROG_AR])
-LT_INIT
+LT_INIT([disable-static])
 AC_PROG_CC
 AC_PROG_CC_C99
 AM_PROG_CC_C_O
