Add translation block to properly set version information
This seems necessary to properly display version information
in the Windows Explorer file properties dialog.
I think it worked on older Windows versions without but
at least on Windows 7 this seems necessary.

--- a/geany_private.rc
+++ b/geany_private.rc
@@ -29,6 +29,10 @@ FILETYPE			VFT_APP
 			VALUE "ProductVersion", VER_FILEVERSION_STR
 		}
 	}
+    BLOCK "VarFileInfo"
+    {
+      VALUE "Translation", 0x409, 0x04E4
+    }
 }
 
 APP_MANIFEST RT_MANIFEST "geany.exe.manifest"
