Add PowerShell tag parser

--- a/tests/ctags/Makefile.am
+++ b/tests/ctags/Makefile.am
@@ -260,6 +260,7 @@ test_sources = \
 	simple.mak						\
 	simple.php						\
 	simple.pl						\
+	simple.ps1						\
 	simple.py						\
 	simple.rb						\
 	simple.sh						\
