Fixed calltip generation to account for generic functions and CUDA kernel calls

--- a/data/filetypes.CUDA.conf
+++ b/data/filetypes.CUDA.conf
@@ -21,6 +21,7 @@ preprocessor.end.$(file.patterns.cpp)=endif
 
 [settings]
 lexer_filetype=C
+tag_parser=C
 
 # default extension used when saving files
 extension=cu
