c family: Fix trigraph handling
X-Universal-CTags-Commit-ID: d6d1a0f2b90a600bdec9cd6ba964ee69382743e4

--- a/tests/ctags/Makefile.am
+++ b/tests/ctags/Makefile.am
@@ -108,6 +108,7 @@ test_sources = \
 	bug960316.v						\
 	bug961001.v						\
 	byte.f							\
+	c-trigraphs.c					\
 	case_sensitivity.php			\
 	char-selector.f90				\
 	classes.php						\
