--- a/tests/ctags/Makefile.am
+++ b/tests/ctags/Makefile.am
@@ -108,6 +108,7 @@ test_sources = \
 	bug960316.v						\
 	bug961001.v						\
 	byte.f							\
+	c-digraphs.c					\
 	c-trigraphs.c					\
 	case_sensitivity.php			\
 	char-selector.f90				\
