Parse return value of go functions
Unfortunately varType is Geany-only so this patch cannot be ported to ctags.

The removal of the extra { read is not the most elegant thing but making
skipType() aware of the argList collection complicates things too much.

--- a/tests/ctags/Makefile.am
+++ b/tests/ctags/Makefile.am
@@ -243,6 +243,7 @@ test_sources = \
 	refcurs.sql						\
 	regexp.js						\
 	return-hint.zep					\
+	return-types.go					\
 	rules.t2t						\
 	sample.t2t						\
 	secondary_fcn_name.js			\
