json: Fix handling of tags containing a dot
X-Universal-CTags-Commit-ID: 7ae28a3d8a7ad5f8a9d6399a4e357fcf19ad2b2e

--- a/tests/ctags/Makefile.am
+++ b/tests/ctags/Makefile.am
@@ -134,6 +134,7 @@ test_sources = \
 	debian_432872.f90				\
 	directives.c					\
 	dopbl2.f						\
+	dotted-names.json				\
 	enum.c							\
 	enum.f90						\
 	enum.java						\
