python: Fix resetting scope on anonymous blocks
The previous fix, coming from [CTags bug #1988026], was incorrect if
the parent was not a root-level element, as it checked the level name
(unqualified) against the parent name (qualified).

However, there is no need to check the level name, all what counts is
the indentation level itself: if it's smaller than an existing level,
it ends it.

This fixes [CTags bug #356].

[CTags bug #1988026]: https://sourceforge.net/p/ctags/bugs/227/
[CTags bug #356]: https://sourceforge.net/p/ctags/bugs/356/

X-Universal-CTags-Commit-ID: ab91e6e1ae84b80870a1e8712fc7f3133e4b5542

--- a/tests/ctags/Makefile.am
+++ b/tests/ctags/Makefile.am
@@ -235,6 +235,7 @@ test_sources = \
 	pure_elem.f95					\
 	py_constructor_arglist.py		\
 	py-skipped-string.py			\
+	python-anonymous-nestlevel_ctags-bug-356.py	\
 	qualified_types.f90				\
 	random.sql						\
 	readlob.sql						\
