Add support for auto-highlighting current word

--- a/data/colorschemes/alt.conf
+++ b/data/colorschemes/alt.conf
@@ -15,6 +15,7 @@ error=0xffffff;0xff0000
 
 selection=0x000000;0xc0c0c0;false;true
 current_line=0x000000;0xf0f0f0;true
+current_word=0xffffff
 brace_good=0x0000ff;0xFFFFFF;true;false
 brace_bad=0xff0000;0xFFFFFF;true;false
 margin_line_number=0x000000;0xd0d0d0
