python: Fix handling of inline comments
If there was two hashes (#) in an inline comment, only the content
between the two was considered a comment.

X-Universal-CTags-Commit-ID: ee93f5b9f393e76a850cf8c894cc748a62981156

--- a/tests/ctags/Makefile.am
+++ b/tests/ctags/Makefile.am
@@ -239,6 +239,7 @@ test_sources = \
 	py_constructor_arglist.py		\
 	py-skipped-string.py			\
 	python-anonymous-nestlevel_ctags-bug-356.py	\
+	python-comments.py				\
 	qualified_types.f90				\
 	random.sql						\
 	readlob.sql						\
