Recognize XPM files as C sources

--- a/data/filetype_extensions.conf
+++ b/data/filetype_extensions.conf
@@ -10,7 +10,7 @@ Asciidoc=*.asciidoc;
 ASM=*.asm;
 Batch=*.bat;*.cmd;*.nt;
 CAML=*.ml;*.mli;
-C=*.c;*.h;
+C=*.c;*.h;*.xpm;
 C++=*.cpp;*.cxx;*.c++;*.cc;*.h;*.hpp;*.hxx;*.h++;*.hh;*.C;*.H;
 CUDA=*.cu;*.cuh;*.h;
 C#=*.cs;
