win32: Add some window-specifc LDFLAGS to geany itself as well
Since we build libgeany some ld flags were applied to libgeany only.
Some of them need to be applied to the main binary as well.

This fixes the problem that a sticky terminal window starts together
with geany.

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -26,9 +26,10 @@ lib_LTLIBRARIES = libgeany.la
 
 geany_SOURCES = main.c
 geany_LDADD = libgeany.la $(GTK_LIBS) $(GTHREAD_LIBS) $(INTLLIBS)
+geany_LDFLAGS =
 
 if ENABLE_BINRELOC
-geany_LDFLAGS = -Wl,-rpath='$$ORIGIN/../lib'
+geany_LDFLAGS += -Wl,-rpath='$$ORIGIN/../lib'
 endif
 
 geany_includedir = $(includedir)/geany
@@ -150,8 +151,9 @@ geany_private.res: $(top_srcdir)/geany_private.rc
 libgeany_la_SOURCES += win32.c win32.h win32defines.h
 libgeany_la_LIBADD  += -lole32 -lwsock32 -lcomdlg32
 libgeany_la_LDFLAGS += -Wl,-luuid -mwindows -mms-bitfields -no-undefined
+geany_LDFLAGS       += -mwindows -mms-bitfields
 
-CLEANFILES += geany_private.res
+CLEANFILES          += geany_private.res
 
 else
 # build Geany for all other platforms
