Replace references to GTK2 with GTK+
This allows to be GTK version agnostic, not to single out GTK3 builds.

--- a/geany.desktop.in
+++ b/geany.desktop.in
@@ -3,7 +3,7 @@ Type=Application
 Version=1.0
 _Name=Geany
 _GenericName=Integrated Development Environment
-_Comment=A fast and lightweight IDE using GTK2
+_Comment=A fast and lightweight IDE using GTK+
 Exec=geany %F
 Icon=geany
 Terminal=false
