ruby: Fix parsing qualified identifiers
The implementation is a bit hacky, but avoids the need for complex
logic to pop several scopes at once.

Closes universal-ctags/ctags#452.

--- a/tests/ctags/Makefile.am
+++ b/tests/ctags/Makefile.am
@@ -257,6 +257,7 @@ test_sources = \
 	return-types.go					\
 	ruby-block-call.rb				\
 	ruby-doc.rb						\
+	ruby-namespaced-class.rb		\
 	ruby-sf-bug-364.rb				\
 	rules.t2t						\
 	sample.t2t						\
