ruby: Fix scope after anonymous classes

--- a/tests/ctags/Makefile.am
+++ b/tests/ctags/Makefile.am
@@ -258,6 +258,7 @@ test_sources = \
 	ruby-block-call.rb				\
 	ruby-doc.rb						\
 	ruby-namespaced-class.rb		\
+	ruby-scope-after-anonymous-class.rb	\
 	ruby-sf-bug-364.rb				\
 	rules.t2t						\
 	sample.t2t						\
