doxygen: generate xml too in preparation for gtkdoc generation
A script will use the xml to generate a gtkdoc'ized header of the plugin API.
The xml files are also installed so that external users can use the xml
that corresponds to the installed version of Geany.

For now a separet doxyfile is used because the gtkdoc'ized header needs
a few types to be documented which not desired to be documented generally.

--- a/.gitignore
+++ b/.gitignore
@@ -99,6 +99,7 @@ Makefile.in
 # /doc/
 #-----------------------------------------------------------------------
 /doc/Doxyfile
+/doc/Doxyfile-gi
 /doc/Doxyfile.stamp
 /doc/geany.1
 /doc/geany.html
