--- a/doc/Doxyfile.in
+++ b/doc/Doxyfile.in
@@ -845,7 +845,8 @@ RECURSIVE              = NO
 # Note that relative paths are relative to the directory from which doxygen is
 # run.
 
-EXCLUDE                =
+EXCLUDE                = @top_srcdir@/doc/geany-gtkdoc.h \
+                         @top_srcdir@/doc/geany-scintilla-gtkdoc.h
 
 # The EXCLUDE_SYMLINKS tag can be used to select whether or not files or
 # directories that are symbolic links (a Unix file system feature) are excluded
