--- a/data/filetype_extensions.conf
+++ b/data/filetype_extensions.conf
@@ -55,6 +55,7 @@ Python=*.py;*.pyw;SConstruct;SConscript;wscript;
 PowerShell=*.ps1;*.psm1;
 reStructuredText=*.rest;*.reST;*.rst;
 R=*.R;*.r;
+REXX=*.rex;*.rexx;*.REX;*.REXX;
 Rust=*.rs;
 Ruby=*.rb;*.rhtml;*.ruby;*.gemspec;Gemfile;rakefile;Rakefile;
 Scala=*.scala;*.scl;
@@ -73,7 +74,7 @@ None=*;
 # Note: restarting is required after editing groups
 [Groups]
 Programming=Clojure;CUDA;Cython;Genie;Scala;
-Script=Graphviz;
+Script=Graphviz;REXX;
 Markup=
 Misc=JSON;
 None=
