tagmanager: Fix handling of scopes starting with a non-ASCII character
Fix handling of scopes starting with a non-ASCII character.

Actually, just drop the check on the first byte of the scope, as it
doesn't seem to serve any purpose as it only checks the first byte (so
isn't any kind of real validation; and as it predates Geany it's
impossible to know the real reason behind this check), and breaks
support for non-ASCII scopes.

--- a/tests/ctags/Makefile.am
+++ b/tests/ctags/Makefile.am
@@ -226,6 +226,7 @@ test_sources = \
 	namespaces2.php					\
 	namespaces.php					\
 	no_terminator.js				\
+	non-ascii-ident1.php			\
 	numlib.f90						\
 	objectivec_implementation.mm	\
 	objectivec_interface.mm			\
