add *.adoc extension for asciidoc files
`*.adoc` is widely used nowadays, e.g. github.

--- a/data/filetype_extensions.conf
+++ b/data/filetype_extensions.conf
@@ -6,7 +6,7 @@ Abaqus=*.inp;
 Abc=*.abc;*.abp;
 ActionScript=*.as;
 Ada=*.adb;*.ads;
-Asciidoc=*.asciidoc;
+Asciidoc=*.asciidoc;*.adoc;
 ASM=*.asm;
 Batch=*.bat;*.cmd;*.nt;
 CAML=*.ml;*.mli;
