--- a/data/filetype_extensions.conf
+++ b/data/filetype_extensions.conf
@@ -7,7 +7,7 @@ Abc=*.abc;*.abp;
 ActionScript=*.as;
 Ada=*.adb;*.ads;
 Asciidoc=*.asciidoc;*.adoc;
-ASM=*.asm;
+ASM=*.asm;*.asm51;*.a51;*.asm;*.ll;*.s03;*.s79;*.s82;*.s90;*.s;
 Batch=*.bat;*.cmd;*.nt;
 CAML=*.ml;*.mli;
 C=*.c;*.h;*.xpm;
@@ -16,12 +16,12 @@ CUDA=*.cu;*.cuh;*.h;
 C#=*.cs;
 CMake=CMakeLists.txt;*.cmake;*.ctest;
 COBOL=*.cob;*.cpy;*.cbl;*.cobol;
-CoffeeScript=*.coffee;Cakefile;*.Cakefile;*.coffee.erb;*.iced;*.iced.erb
-Conf=*.conf;*.ini;config;*rc;*.cfg;*.desktop;*.properties;
+CoffeeScript=*.coffee;Cakefile;*.Cakefile;*.coffee.erb;*.iced;*.iced.erb;
+Conf=*.conf;*.configure;*.ini;config;*rc;*.cfg;*.desktop;*.prop;*.properties;control;
 CSS=*.css;
 Cython=*.pyx;*.pxd;*.pxi;
 D=*.d;*.di;
-Diff=*.diff;*.patch;*.rej;
+Diff=*.diff;*.patch;*.rej;*.debdiff;*.dpatch;*.kpatch;
 Docbook=*.docbook;
 Erlang=*.erl;*.hrl;
 F77=*.f;*.for;*.ftn;*.f77;*.F;*.FOR;*.FTN;*.fpp;*.FPP
@@ -35,14 +35,15 @@ Go=*.go;
 Graphviz=*.gv;*.dot;
 Haskell=*.hs;*.lhs;*.hs-boot;*.lhs-boot;
 Haxe=*.hx;
-HTML=*.htm;*.html;*.shtml;*.hta;*.htd;*.htt;*.cfm;*.tpl;
+HTML=*.htm;*.html;*.shtml;*.hta;*.htd;*.htt;*.cfm;*.tpl;*.mhtml;
 Java=*.java;*.jsp;
 Javascript=*.js;
 JSON=*.json;
 LaTeX=*.tex;*.sty;*.idx;*.ltx;*.latex;*.aux;*.bib;
 Lisp=*.lisp;
 Lua=*.lua;
-Make=*.mak;*.mk;GNUmakefile;makefile;Makefile;makefile.*;Makefile.*;
+Make=*.mak;*.make;*.mk;GNUmakefile;makefile;Makefile;makefile.*;Makefile.*;
+Manpage=*.1;*.2;*.3;*.4;*.5;*.6;*.7;*.8;
 Markdown=*.mdml;*.markdown;*.md;*.mkd;
 Matlab/Octave=*.m;
 NSIS=*.nsi;*.nsh;
@@ -51,29 +52,30 @@ Pascal=*.pas;*.pp;*.inc;*.dpr;*.dpk;
 Perl=*.pl;*.perl;*.pm;*.agi;*.pod;
 PHP=*.php;*.php3;*.php4;*.php5;*.phtml;
 Po=*.po;*.pot;
-Python=*.py;*.pyw;SConstruct;SConscript;wscript;
+Python=*.py;*.pyw;*.py3;*.py2;*.pygtk;*.pyqt;SConstruct;SConscript;wscript;
 PowerShell=*.ps1;*.psm1;
 reStructuredText=*.rest;*.reST;*.rst;
 R=*.R;*.r;
 Rust=*.rs;
 Ruby=*.rb;*.rhtml;*.ruby;*.gemspec;Gemfile;rakefile;Rakefile;
 Scala=*.scala;*.scl;
-Sh=*.sh;configure;configure.in;configure.in.in;configure.ac;*.ksh;*.mksh;*.zsh;*.ash;*.bash;.bashrc;bash.bashrc;.bash_*;bash_*;*.m4;PKGBUILD;*profile;
-SQL=*.sql;
+Sh=*.sh;configure;configure.in;configure.in.in;configure.ac;*.ksh;*.mksh;*.zsh;*.dash;*.ash;*.bash;.bashrc;bash.bashrc;.bash_*;bash_*;*.m4;PKGBUILD;*profile;
+SQL=*.sql;*.sqlite;*.sql3;
 Tcl=*.tcl;*.tk;*.wish;
 Txt2tags=*.t2t;
 Vala=*.vala;*.vapi;
 Verilog=*.v;
 VHDL=*.vhd;*.vhdl;
-XML=*.xml;*.sgml;*.xsl;*.xslt;*.xsd;*.xhtml;*.xul;*.dtd;*.xtpl;
+XML=*.xml;*.sgml;*.xsl;*.xslt;*.xsd;*.xhtml;*.svg;*.xul;*.dtd;*.xtpl;*.xaiml;*.aiml;
 YAML=*.yaml;*.yml;
 Zephir=*.zep;
+README=README;READ.1st;
 None=*;
 
 # Note: restarting is required after editing groups
 [Groups]
-Programming=Clojure;CUDA;Cython;Genie;Scala;
-Script=Graphviz;
+Programming=Clojure;CUDA;Cython;Genie;Go;Rust;Scala;
+Script=Graphviz;coffeescript;
 Markup=
-Misc=JSON;
+Misc=JSON;Manpage;
 None=
