--- a/data/filetype_extensions.conf
+++ b/data/filetype_extensions.conf
@@ -16,7 +16,7 @@ CUDA=*.cu;*.cuh;*.h;
 C#=*.cs;
 CMake=CMakeLists.txt;*.cmake;*.ctest;
 COBOL=*.cob;*.cpy;*.cbl;*.cobol;
-CoffeeScript=*.coffee;Cakefile;*.Cakefile;*.coffee.erb;*.iced;*.iced.erb
+CoffeeScript=*.coffee;Cakefile;*.Cakefile;*.coffee.erb;*.iced;*.iced.erb;
 Conf=*.conf;*.ini;config;*rc;*.cfg;*.desktop;*.properties;
 CSS=*.css;
 Cython=*.pyx;*.pxd;*.pxi;
@@ -24,10 +24,10 @@ D=*.d;*.di;
 Diff=*.diff;*.patch;*.rej;
 Docbook=*.docbook;
 Erlang=*.erl;*.hrl;
-F77=*.f;*.for;*.ftn;*.f77;*.F;*.FOR;*.FTN;*.fpp;*.FPP
+F77=*.f;*.for;*.ftn;*.f77;*.F;*.FOR;*.FTN;*.fpp;*.FPP;
 Ferite=*.fe;
 Forth=*.fs;*.fth;
-Fortran=*.f90;*.f95;*.f03;*.f08;*.F90;*.F95;*.F03;*.F08
+Fortran=*.f90;*.f95;*.f03;*.f08;*.F90;*.F95;*.F03;*.F08;
 FreeBasic=*.bas;*.bi;*.vbs;
 Genie=*.gs;
 GLSL=*.glsl;*.frag;*.vert;
@@ -65,7 +65,7 @@ Txt2tags=*.t2t;
 Vala=*.vala;*.vapi;
 Verilog=*.v;
 VHDL=*.vhd;*.vhdl;
-XML=*.xml;*.sgml;*.xsl;*.xslt;*.xsd;*.xhtml;*.xul;*.dtd;*.xtpl;
+XML=*.xml;*.sgml;*.xsl;*.xslt;*.xsd;*.xhtml;*.xul;*.dtd;*.xtpl;*.mml;*.mathml;
 YAML=*.yaml;*.yml;
 Zephir=*.zep;
 None=*;
