--- a/data/filetype_extensions.conf
+++ b/data/filetype_extensions.conf
@@ -21,7 +21,7 @@ Conf=*.conf;*.ini;config;*rc;*.cfg;*.desktop;*.properties;
 CSS=*.css;
 Cython=*.pyx;*.pxd;*.pxi;
 D=*.d;*.di;
-Diff=*.diff;*.patch;*.rej;
+Diff=*.diff;*.patch;*.rej;*.debdiff;*.dpatch;*.kpatch;
 Docbook=*.docbook;
 Erlang=*.erl;*.hrl;
 F77=*.f;*.for;*.ftn;*.f77;*.F;*.FOR;*.FTN;*.fpp;*.FPP;
@@ -58,14 +58,14 @@ R=*.R;*.r;
 Rust=*.rs;
 Ruby=*.rb;*.rhtml;*.ruby;*.gemspec;Gemfile;rakefile;Rakefile;
 Scala=*.scala;*.scl;
-Sh=*.sh;configure;configure.in;configure.in.in;configure.ac;*.ksh;*.mksh;*.zsh;*.ash;*.bash;.bashrc;bash.bashrc;.bash_*;bash_*;*.m4;PKGBUILD;*profile;
+Sh=*.sh;configure;configure.in;configure.in.in;configure.ac;*.ksh;*.mksh;*.zsh;*.dash;*.ash;*.bash;.bashrc;bash.bashrc;.bash_*;bash_*;*.m4;PKGBUILD;*profile;
 SQL=*.sql;
 Tcl=*.tcl;*.tk;*.wish;
 Txt2tags=*.t2t;
 Vala=*.vala;*.vapi;
 Verilog=*.v;
 VHDL=*.vhd;*.vhdl;
-XML=*.xml;*.sgml;*.xsl;*.xslt;*.xsd;*.xhtml;*.xul;*.dtd;*.xtpl;*.mml;*.mathml;
+XML=*.xml;*.sgml;*.xsl;*.xslt;*.xsd;*.xhtml;*.svg;*.xul;*.dtd;*.xtpl;*.mml;*.mathml;*.x3d;
 YAML=*.yaml;*.yml;
 Zephir=*.zep;
 None=*;
