--- a/data/filetype_extensions.conf
+++ b/data/filetype_extensions.conf
@@ -60,6 +60,7 @@ Ruby=*.rb;*.rhtml;*.ruby;*.gemspec;Gemfile;rakefile;Rakefile;
 Scala=*.scala;*.scl;
 Sh=*.sh;configure;configure.in;configure.in.in;configure.ac;*.ksh;*.mksh;*.zsh;*.ash;*.bash;.bashrc;bash.bashrc;.bash_*;bash_*;*.m4;PKGBUILD;*profile;
 SQL=*.sql;
+Squirrel=*.nut;
 Tcl=*.tcl;*.tk;*.wish;
 Txt2tags=*.t2t;
 Vala=*.vala;*.vapi;
@@ -72,7 +73,7 @@ None=*;
 
 # Note: restarting is required after editing groups
 [Groups]
-Programming=Clojure;CUDA;Cython;Genie;Scala;
+Programming=Clojure;CUDA;Cython;Genie;Scala;Squirrel;
 Script=Graphviz;
 Markup=
 Misc=JSON;
