--- a/data/filetype_extensions.conf
+++ b/data/filetype_extensions.conf
@@ -7,7 +7,7 @@ Abc=*.abc;*.abp;
 ActionScript=*.as;
 Ada=*.adb;*.ads;
 Asciidoc=*.asciidoc;*.adoc;
-ASM=*.asm;
+ASM=*.asm;*.asm51;*.a51;
 Batch=*.bat;*.cmd;*.nt;
 CAML=*.ml;*.mli;
 C=*.c;*.h;*.xpm;
