--- a/data/filetype_extensions.conf
+++ b/data/filetype_extensions.conf
@@ -43,7 +43,7 @@ LaTeX=*.tex;*.sty;*.idx;*.ltx;*.latex;*.aux;*.bib;
 Lisp=*.lisp;
 Lua=*.lua;
 Make=*.mak;*.mk;GNUmakefile;makefile;Makefile;makefile.*;Makefile.*;
-Markdown=*.mdml;*.markdown;*.md;*.mkd;
+Markdown=*.mdml;*.markdown;*.md;*.mkd;*.mkdn;*.mdwn;*.mdown;*.mdtxt;*.mdtext;
 Matlab/Octave=*.m;
 NSIS=*.nsi;*.nsh;
 Objective-C=*.m;*.mm;*.h;
