encodings: move private stuff into private header
encodings.h had a pretty large GEANY_PRIVATE part so it's worthwhile to
separate that into its own header (as per HACKING). What's left is used by the
plugin API.

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -5,6 +5,7 @@ EXTRA_DIST = \
 	gb.c \
 	plugindata.h \
 	documentprivate.h \
+	encodingsprivate.h \
 	filetypesprivate.h \
 	keybindingsprivate.h \
 	pluginprivate.h \
