Add file-extensions for Clojure
The extensions are from Wikipedia: https://en.wikipedia.org/wiki/Clojure

Closes #842.

--- a/data/filetype_extensions.conf
+++ b/data/filetype_extensions.conf
@@ -12,6 +12,7 @@ Batch=*.bat;*.cmd;*.nt;
 CAML=*.ml;*.mli;
 C=*.c;*.h;*.xpm;
 C++=*.cpp;*.cxx;*.c++;*.cc;*.h;*.hpp;*.hxx;*.h++;*.hh;*.C;*.H;
+Clojure=*.clj;*.cljs;*.cljc;
 CUDA=*.cu;*.cuh;*.h;
 C#=*.cs;
 CMake=CMakeLists.txt;*.cmake;*.ctest;
