Treat the "h" extension as a C++ file
The extension is used by both C and C++ and lexing/parsing C headers with
the C++ parser causes less problems (identifiers named like C++ keywords
get highlighted and tags aren't generated for them) than parsing C++
headers with the C parser (parsing and lexing completely broken).

--- a/data/filetype_extensions.conf
+++ b/data/filetype_extensions.conf
@@ -10,7 +10,7 @@ Asciidoc=*.asciidoc;*.adoc;
 ASM=*.asm;*.asm51;*.a51;
 Batch=*.bat;*.cmd;*.nt;
 CAML=*.ml;*.mli;
-C=*.c;*.h;*.xpm;
+C=*.c;*.xpm;
 C++=*.cpp;*.cxx;*.c++;*.cc;*.h;*.hpp;*.hxx;*.h++;*.hh;*.C;*.H;
 CUDA=*.cu;*.cuh;*.h;
 C#=*.cs;
