Add an option to control GtkDoc header generation
This allows explicit activation or deactivation of the GtkDoc header
generation.

This might allow to e.g. force enable it on distcheck.

--- a/configure.ac
+++ b/configure.ac
@@ -123,7 +123,7 @@ AC_SUBST([pkgdatadir])
 # Documentation tools
 GEANY_CHECK_DOCUTILS
 GEANY_CHECK_DOXYGEN
-GEANY_CHECK_PYTHON
+GEANY_CHECK_GTKDOC_HEADER
 
 # libgeany
 GEANY_LIB_INIT
